  is actually a suffix of `name` and raises Invalid_argument otherwise.
  (Xavier Leroy, report by whitequark, review by David Allsopp)

* #10482: mark the Stream and Genlex modules as deprecated, in preparation
  for a future removal.  These modules (without deprecation alert)
  are now provided by the camlp-streams library.
  (Xavier Leroy, review by Nicolás Ojeda Bär)

### Other libraries:

- #10192: Add support for Unix domain sockets on Windows and use them
  to emulate Unix.socketpair (only available on Windows 1803+)
  (Antonin Décimo, review by David Allsopp)

### Tools:

- #3959, #7202, #10476: ocaml, in script mode, directive errors
  (`#use "missing_file";;`) use stderr and exit with an error.
  (Florian Angeletti, review by Gabriel Scherer)

### Manual and documentation:

- #7812, #10475: reworded the description of the behaviors of
  float->int conversions in case of overflow, and of iterators
  in case of concurrent modifications.
  (Xavier Leroy, report by whitequark, review by David Allsopp)

### Compiler user-interface and warnings:

- #10328: Give more precise error when disambiguation could not possibly work.
  (Leo White, review by Gabriel Scherer and Florian Angeletti)

- #10361: Improve error messages for mismatched record and variant
  definitions.
  (Florian Angeletti, review by Gabriel Radanne and Gabriel Scherer)

- #10407: Produce more detailed error messages that contain full error traces
  when module inclusion fails.
  (Antal Spector-Zabusky, review by Florian Angeletti)

### Internal/compiler-libs changes:

- #10433: Remove the distinction between 32-bit aligned and 64-bit aligned
  64-bit floats in Cmm.memory_chunk.
  (Greta Yorsh, review by Xavier Leroy)

- #10434: Pun labelled arguments with type constraint in function applications.
  (Greta Yorsh, review by Nicolas Chataing and Nicolás Ojeda Bär)

- #10470: Remove unused `cstr_normal` field from the `constructor_description`
  type
  (Nicolas Chataing, review by Gabriel Scherer)
