@@ -20,6 +20,9 @@ Working version
   are now provided by the camlp-streams library.
   (Xavier Leroy, review by Nicolás Ojeda Bär)
 
+- #10526: add Random.bits32, Random.bits64, Random.nativebits
+  (Xavier Leroy, review by Gabriel Scherer and François Bobot)
+
 ### Other libraries:
 
 - #10192: Add support for Unix domain sockets on Windows and use them
